# torchin

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
doc/: Doxyfile
src/core/tensor/: .#shape.hpp  shape.hpp  tensor.hpp
src/core/tensor/float/: arithmetic.hpp  convolution.hpp  experiment1.hpp  experiments1.hpp  functions.hpp  math1.hpp  operator.hpp  pooling.hpp  print.hpp  utils1.hpp
src/core/tensor/uint32/: convolution.hpp  logic.hpp  operator.hpp  print.hpp  utils1.hpp
src/nn/criterion/: absCriterion.hpp  bceCriterion.hpp  cosineEmbeddingCriterion.hpp  criterion.hpp  crossEntropyCriterion.hpp  distKLDivCriterion.hpp  hingeEmbeddingCriterion.hpp  mseCriterion.hpp
src/nn/modules/: module.hpp
src/nn/modules/container/: concat.hpp  container.hpp  parallel.hpp  sequential.hpp
src/nn/modules/convolutionLayers/: spatialConvolution.hpp  spatialConvolutions.hpp  spatialMaxPooling.hpp  temporalConvolution.hpp  temporalMaxPooling.hpp
src/nn/modules/simpleLayers/: linear.hpp  mul.hpp
src/nn/modules/transfer/: hardShrink.hpp  hardTanh.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
test/: test.cpp
